# obs-move-to-sound

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: main.c
